force-app/main/default/objects/SHT_History__c/SHT_History__c.object-meta.xml
<CustomObject>
    <label>SHT History</label>
    <nameField>
        <displayFormat>SHTH- {0000000}</displayFormat>
        <label>SHT History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SHT History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>