force-app/main/default/objects/SHT_History__c/fields/Cancellation_Reason__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Reason__c</fullName>
    <label>Cancellation Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Saved Deal</fullName>
            </value>
            <value>
                <fullName>Z4</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
                <isActive>false</isActive>
                <label>Others</label>
            </value>
            <value>
                <fullName>Wrong Price</fullName>
                <isActive>false</isActive>
                <label>Wrong Price</label>
            </value>
            <value>
                <fullName>Wrong Volume</fullName>
                <isActive>false</isActive>
                <label>Wrong Volume</label>
            </value>
            <value>
                <fullName>Z5</fullName>
                <isActive>false</isActive>
                <label>Z5</label>
            </value>
            <value>
                <fullName>Z6</fullName>
                <isActive>false</isActive>
                <label>Z6</label>
            </value>
            <value>
                <fullName>Z9</fullName>
                <isActive>false</isActive>
                <label>Z9</label>
            </value>
            <value>
                <fullName>ZB</fullName>
                <isActive>false</isActive>
                <label>ZB</label>
            </value>
            <value>
                <fullName>ZD</fullName>
                <isActive>false</isActive>
                <label>ZD</label>
            </value>
            <value>
                <fullName>ZE</fullName>
                <isActive>false</isActive>
                <label>ZE</label>
            </value>
            <value>
                <fullName>ZF</fullName>
                <isActive>false</isActive>
                <label>ZF</label>
            </value>
            <value>
                <fullName>ZG</fullName>
                <isActive>false</isActive>
                <label>ZG</label>
            </value>
            <value>
                <fullName>ZH</fullName>
                <isActive>false</isActive>
                <label>ZH</label>
            </value>
            <value>
                <fullName>ZI</fullName>
                <isActive>false</isActive>
                <label>ZI</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>