force-app/main/default/objects/SHT_History__c/fields/Cancellation_Reason_Label__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Reason_Label__c</fullName>
    <label>Cancellation Reason Label</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Wrong Volume</fullName>
            </value>
            <value>
                <fullName>Wrong Price</fullName>
            </value>
            <value>
                <fullName>Wrong Customer</fullName>
            </value>
            <value>
                <fullName>Wrong Plant</fullName>
            </value>
            <value>
                <fullName>Wrong Lifting Window</fullName>
            </value>
            <value>
                <fullName>wrong product</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>