force-app/main/default/objects/SHT_History__c/fields/Contract_Start__c.field-meta.xml
<CustomField>
    <fullName>Contract_Start__c</fullName>
    <label>Contract Start Date</label>
    <type>Date</type>
</CustomField>