force-app/main/default/objects/SHT_History__c/fields/Deal_Comment__c.field-meta.xml
<CustomField>
    <fullName>Deal_Comment__c</fullName>
    <label>Deal Comment</label>
    <type>TextArea</type>
</CustomField>