force-app/main/default/objects/SHT_History__c/fields/Deal_Hour__c.field-meta.xml
<CustomField>
    <fullName>Deal_Hour__c</fullName>
    <label>Deal Hour</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>