force-app/main/default/objects/SHT_History__c/fields/Effective_Margin__c.field-meta.xml
<CustomField>
    <fullName>Effective_Margin__c</fullName>
    <formula>SP_100L__c - BSP__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Effective Margin(Euro/100L)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>