force-app/main/default/objects/SHT_History__c/fields/IsPricingTaxed__c.field-meta.xml
<CustomField>
    <fullName>IsPricingTaxed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsPricingTaxed</label>
    <type>Checkbox</type>
</CustomField>