force-app/main/default/objects/SHT_History__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Location</label>
    <referenceTo>Location__c</referenceTo>
    <relationshipLabel>SHT History</relationshipLabel>
    <relationshipName>SHT_History</relationshipName>
    <type>Lookup</type>
</CustomField>