force-app/main/default/objects/SHT_History__c/fields/Margin_vs_MSP__c.field-meta.xml
<CustomField>
    <fullName>Margin_vs_MSP__c</fullName>
    <formula>SP_100L__c  -  MSP__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Margin vs MSP</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>