force-app/main/default/objects/SHT_History__c/fields/Material_No__c.field-meta.xml
<CustomField>
    <fullName>Material_No__c</fullName>
    <formula>MRC__r.Product__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Material No</label>
    <type>Text</type>
</CustomField>