force-app/main/default/objects/SHT_History__c/fields/MRC__c.field-meta.xml
<CustomField>
    <fullName>MRC__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>MRC</label>
    <referenceTo>MRC__c</referenceTo>
    <relationshipLabel>SHT History</relationshipLabel>
    <relationshipName>SHT_Historys</relationshipName>
    <type>Lookup</type>
</CustomField>