force-app/main/default/objects/SHT_History__c/fields/MRC_Number__c.field-meta.xml
<CustomField>
    <fullName>MRC_Number__c</fullName>
    <label>MRC Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>