force-app/main/default/objects/SHT_History__c/fields/OTM__c.field-meta.xml
<CustomField>
    <fullName>OTM__c</fullName>
    <defaultValue>0</defaultValue>
    <label>OTM</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>