force-app/main/default/objects/SHT_History__c/fields/Plant_No__c.field-meta.xml
<CustomField>
    <fullName>Plant_No__c</fullName>
    <formula>Location__r.Plant_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Plant No</label>
    <type>Text</type>
</CustomField>