force-app/main/default/objects/SHT_History__c/fields/Price_Condition__c.field-meta.xml
<CustomField>
    <fullName>Price_Condition__c</fullName>
    <label>Price Condition</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>YP23</fullName>
            </value>
            <value>
                <fullName>YP24</fullName>
            </value>
            <value>
                <fullName>YP03</fullName>
            </value>
            <value>
                <fullName>YP04</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>