force-app/main/default/objects/SHT_History__c/fields/Product_Catalogue__c.field-meta.xml
<CustomField>
    <fullName>Product_Catalogue__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Catalogue</label>
    <referenceTo>Product_Catalogue__c</referenceTo>
    <relationshipLabel>SHT_History</relationshipLabel>
    <relationshipName>SHT_Historys</relationshipName>
    <type>Lookup</type>
</CustomField>