force-app/main/default/objects/SHT_History__c/fields/PSP__c.field-meta.xml
<CustomField>
    <fullName>PSP__c</fullName>
    <label>PSP</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>