force-app/main/default/objects/SHT_History__c/fields/Sales_Type__c.field-meta.xml
<CustomField>
    <fullName>Sales_Type__c</fullName>
    <label>Sales Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Internet Sales</fullName>
            </value>
            <value>
                <fullName>Obam Sales</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>