force-app/main/default/objects/SHT_History__c/fields/SHT_Parent__c.field-meta.xml
<CustomField>
    <fullName>SHT_Parent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SHT Parent</label>
    <referenceTo>SHT__c</referenceTo>
    <relationshipLabel>SHT History</relationshipLabel>
    <relationshipName>SHT_HistoryParent</relationshipName>
    <type>Lookup</type>
</CustomField>