force-app/main/default/objects/SHT_History__c/fields/Target_Margin__c.field-meta.xml
<CustomField>
    <fullName>Target_Margin__c</fullName>
    <label>Target Margin</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>