force-app/main/default/objects/SHT_History__c/fields/UserTimezoneOffset__c.field-meta.xml
<CustomField>
    <fullName>UserTimezoneOffset__c</fullName>
    <label>UserTimezoneOffset</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>