force-app/main/default/objects/SHT_History__c/fields/Volume_Unit__c.field-meta.xml
<CustomField>
    <fullName>Volume_Unit__c</fullName>
    <defaultValue>&apos;CBM&apos;</defaultValue>
    <label>Volume Unit</label>
    <length>20</length>
    <type>Text</type>
</CustomField>