force-app/main/default/objects/SHT_History__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>MRC_Number__c</columns>
    <columns>SAP_Contract_Number__c</columns>
    <columns>Status__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>SP_100L__c</columns>
    <columns>Volume_CBM__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>IsATPVolumeReduced__c</columns>
    <columns>IsGsapDealCancelOn__c</columns>
    <columns>IsGsapDealCreateOn__c</columns>
    <columns>IsPricingTaxed__c</columns>
    <columns>IsVolumeHedged__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>