force-app/main/default/objects/SHT_History__c/listViews/Internet_Sales.listView-meta.xml
<ListView>
    <fullName>Internet_Sales</fullName>
    <columns>NAME</columns>
    <columns>Volume_CBM__c</columns>
    <columns>MSP__c</columns>
    <columns>SP_100L__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Sales_Type__c</field>
        <operation>equals</operation>
        <value>Internet Sales</value>
    </filters>
    <label>Internet Sales</label>
</ListView>