force-app/main/default/objects/SHT_History__c/listViews/Today_s_Deals.listView-meta.xml
<ListView>
    <fullName>Today_s_Deals</fullName>
    <columns>NAME</columns>
    <columns>MRC_Number__c</columns>
    <columns>Customer__c</columns>
    <columns>Location__c</columns>
    <columns>Product_Category__c</columns>
    <columns>Tranche__c</columns>
    <columns>Volume_CBM__c</columns>
    <columns>Status__c</columns>
    <columns>SP_100L__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>Today&apos;s Deals</label>
</ListView>